# toolbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
projects/cifar-100-benchmark/: AGENTS.md  README.md  pyproject.toml
projects/cifar-100-benchmark/.sisyphus/: boulder.json
projects/cifar-100-benchmark/.sisyphus/notepads/convnext32/: decisions.md  issues.md  learnings.md  problems.md
projects/cifar-100-benchmark/.sisyphus/plans/: convnext32.md
projects/cifar-100-benchmark/artifacts_convnext32_full/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_convnext32_full/runs/convnext32_img64_shot10_seed0/: metrics.jsonl
projects/cifar-100-benchmark/artifacts_convnext32_full/runs/convnext32_img64_shot20_seed0/: metrics.jsonl
projects/cifar-100-benchmark/artifacts_convnext32_full/runs/convnext32_img64_shot50_seed0/: metrics.jsonl
projects/cifar-100-benchmark/artifacts_convnext32_full/splits/shot_splits/: shot_10_seed_0.json  shot_50_seed_0.json
projects/cifar-100-benchmark/artifacts_convnext32_full2/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_convnext32_full2/runs/convnext32_img64_shot10_seed0/: metrics.jsonl
projects/cifar-100-benchmark/artifacts_convnext32_full2/runs/convnext32_img64_shot20_seed0/: metrics.jsonl
projects/cifar-100-benchmark/artifacts_convnext32_full2/splits/seed_splits/: seed_0.json
projects/cifar-100-benchmark/artifacts_convnext32_smoke/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_convnext32_ssl_full/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_convnext32_ssl_smoke/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_fixed_ssl/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/artifacts_fixed_ssl_es/: leaderboard.csv  summary.csv
projects/cifar-100-benchmark/configs/: default.yaml
projects/cifar-100-benchmark/configs/data/: cifar100.yaml
projects/cifar-100-benchmark/configs/experiment/: full.yaml  full_reduced.yaml  full_reduced_2res.yaml  full_reduced_convnext32.yaml  smoke.yaml  smoke_128.yaml
projects/cifar-100-benchmark/configs/loss/: ce.yaml
projects/cifar-100-benchmark/configs/model/: convnext32_atto.yaml  convnextv2_atto.yaml  view_fusion.yaml  yolo26n.yaml
projects/cifar-100-benchmark/configs/optim/: adamw.yaml  sgd.yaml
projects/cifar-100-benchmark/configs/pretrain/: byol.yaml  dino.yaml  mocov3.yaml  supcon.yaml
projects/cifar-100-benchmark/configs/runtime/: local.yaml
projects/cifar-100-benchmark/configs/scheduler/: cosine.yaml  multistep.yaml
projects/cifar-100-benchmark/src/cifar_100_benchmark/: __init__.py  cli.py
projects/dataset-tool/backend/: Cargo.toml
projects/dataset-tool/backend/src/: main.rs
projects/dman/: AGENTS.md  Cargo.toml  Makefile  README.md  book.toml  pyproject.toml  quickstart.md
projects/dman/.cargo/: config.toml
projects/dman/.sisyphus/: boulder.json
projects/dman/.sisyphus/evidence/: task-1-db-tests.txt  task-1-workspace-build.txt  task-10-config.txt  task-11-cli.txt  task-12-hf.txt  task-12-yolo-tests.txt  task-13-yolo.txt  task-14-coco.txt  task-15-formats.txt  task-15-multi-asset-tests.txt  task-16-embeddings.txt  task-16-python-plugin-check.txt  task-17-bbox-consistency.txt  task-17-builder-rewrite.txt  task-17-virtual-dataset.txt  task-18-loader-rewrite.txt  task-18-schema-evolution.txt  task-19-materialize.txt  task-19-python-module-check.txt  task-2-error-display.txt  task-2-error-types.txt  task-20-ops.txt  task-20-server-tests.txt  task-21-label-studio-tests.txt  task-21-transforms.txt  task-22-cli-integration.txt  task-22-server.txt  task-23-rest-api.txt  task-23-tui-check.txt  task-24-mdbook-build.txt  task-24-predictions.txt  task-25-bbox-consistency.txt  task-25-patches.txt  task-26-build.txt  task-26-clippy.txt  task-26-tests.txt  task-29-tui.txt  task-3-migration.txt  task-3-types-tests.txt  task-30-detail.txt  (+18 more)
projects/dman/.sisyphus/plans/: custom-format-registration.md  dman.md  sample-asset-migration.md
projects/dman/book/: 404.html  index.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-7e651e21.js  toc-ed67a0a7.js  toc.html
projects/dman/book/features/: catalog-and-cli.html  custom-format-registration.html  format-registry.html  index.html  label-studio.html  python-sdk.html  tui.html
projects/dman/crates/cli/: Cargo.toml
projects/dman/crates/core/: Cargo.toml
projects/dman/crates/python/: Cargo.toml
projects/dman/crates/server/: Cargo.toml  build.rs
projects/dman/crates/tui/: Cargo.toml
projects/dman/docs/: ARROW_FFI_INDEX.md  ARROW_FFI_PATTERNS.md  ARROW_FFI_QUICK_START.md  ARROW_FFI_RESEARCH_SUMMARY.md  index.md
projects/dman/docs/api/: openapi.yaml
projects/dman/docs/features/: catalog-and-cli.md  format-registry.md  label-studio.md  python-sdk.md  tui.md
projects/dman/docs/src/: SUMMARY.md  api-reference.md  index.md  quickstart.md
projects/dman/notebooks/: dman_walkthrough.ipynb  tutorial_01_building_a_dataset.ipynb  tutorial_02_format_conversion.ipynb  tutorial_03_dataset_analysis.ipynb
projects/dman/python/dman/: __init__.py  __init__.pyi
projects/dman/python/tests/: test_smoke.py
projects/online-anomaly-demo/: AGENTS.md  README.md  main_v2.py  pyproject.toml
projects/online-anomaly-demo/configs/: base.yaml  v2.yaml
projects/online-anomaly-demo/scripts/: run_pipeline.py  run_pipeline_v2.py  run_stage1.py  run_stage1_v2.py  run_stage2_4_demo.py  run_stage2_4_demo_v2.py
projects/online-anomaly-demo/src/online_anomaly_demo/: __init__.py  class_names.py  config.py  config_v2.py  stage1_prepare.py  stage2_stream.py  stage3_cluster.py  stage3_detector.py  stage3_detector_v2.py  stage3_vector_store.py  stage3_vector_store_v2.py  stage4_viz.py
projects/supcon-demo/: AGENTS.md  README.md  pyproject.toml  run_full_flow.sh
projects/supcon-demo/configs/: AGENTS.md  class_disjoint.yaml  class_disjoint_staged.yaml  full.yaml  smoke.yaml
projects/supcon-demo/src/supcon_demo/: AGENTS.md  benchmark.py  config.py  data.py  losses.py  model.py  runner.py  training.py
(+199 files in other folders)
