[project]
name = "cifar-100-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "teepoy", email = "" }]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "omegaconf>=2.3.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.31",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
cifar100-bench = "cifar_100_benchmark.cli:main"
cifar100-run-all = "cifar_100_benchmark.runner.run_all:main"
