[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/python",
]
resolver = "3"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8.11"
open = "5.3"
pyo3 = { version = "0.28", features = ["extension-module"] }
parquet = "58.1"
arrow = "58.1"
arrow-array = { version = "58.1", features = ["chrono-tz", "ffi"] }
arrow-schema = "58.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
