[project]
name = "supcon-demo"
version = "0.1.0"
description = "SupCon finetuning and embedding benchmark demo"
readme = "README.md"
authors = [{ name = "teepoy" }]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "omegaconf>=2.3.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.scripts]
supcon-demo-flow = "supcon_demo.runner:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
