[package]
name = "dman-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
dirs = "5"
image = "0.25"
parquet = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[test]]
name = "virtual_integration"
path = "tests/virtual_integration.rs"

[[test]]
name = "roundtrip"
path = "tests/roundtrip/mod.rs"
