[package]
name = "dman-python"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { workspace = true, optional = true }
dman-core = { path = "../core" }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
