[package]
name = "dman-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
dman-core = { path = "../core" }
dirs = "5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
