[package]
name = "dman-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
dman-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "5"
rust-embed = "8.11"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
